GNOME Bugzilla – Bug 765966
settings: fix initial value for gtk-font-name
Last modified: 2016-05-06 11:41:55 UTC
Fixes invalid fonts at application startup.
Created attachment 327274 [details] [review] settings: fix initial value for gtk-font-name Previously, fetching the font size with gtk_settings_get_font_size() would result in 0 until a font had been changed in the underlying settings (such as in GSettings for wayland). This fixes the initial value to match what would have happened after a notify of the property changing.
It looks like commit fe7be14db8efb08e72e22f60c2640cdc1fdfcd6e reintroduced the issue with the font being invalid at start-up.
Fixed in commit b938cfe5be41bf55aec9ced843b26f27518d3c9f.